--- a/Makefile.in
+++ b/Makefile.in
@@ -54,10 +54,9 @@ MAN8TARGETS=	radmind.8
 MANTARGETS=	${MAN1TARGETS} ${MAN5TARGETS} ${MAN8TARGETS}
 TARGETS=        radmind ${BINTARGETS}
 
-RADMIND_OBJ=    version.o daemon.o command.o argcargv.o code.o	\
+RADMIND_OBJ=    version.o daemon.o command.o argcargv.o code.o \
                 cksum.o base64.o mkdirs.o applefile.o connect.o \
-		list.o wildcard.o logname.o pathcmp.o tls.o 	\
-		usageopt.o
+		list.o wildcard.o logname.o pathcmp.o tls.o 
 
 FSDIFF_OBJ=     version.o fsdiff.o argcargv.o transcript.o llist.o code.o \
                 hardlink.o cksum.o base64.o pathcmp.o radstat.o applefile.o \
@@ -72,10 +71,12 @@ LAPPLY_OBJ=     version.o lapply.o argcargv.o code.o base64.o retr.o \
                 applefile.o report.o tls.o mkprefix.o
 
 LCREATE_OBJ=    version.o lcreate.o argcargv.o code.o connect.o progress.o \
-                stor.o applefile.o base64.o cksum.o radstat.o tls.o
+                stor.o applefile.o base64.o cksum.o radstat.o tls.o	\
+		usageopt.o
 
-LCKSUM_OBJ=     version.o lcksum.o argcargv.o cksum.o base64.o code.o \
-                progress.o pathcmp.o applefile.o connect.o root.o
+LCKSUM_OBJ=     version.o lcksum.o argcargv.o cksum.o base64.o code.o	\
+                progress.o pathcmp.o applefile.o connect.o root.o	\
+		usageopt.o
 
 LMERGE_OBJ=     version.o lmerge.o argcargv.o code.o pathcmp.o mkdirs.o \
 		root.o
