Rework to my version -4

--- a/Makefile.in
+++ b/Makefile.in
@@ -64,11 +64,11 @@ FSDIFF_OBJ=     version.o fsdiff.o argcargv.o transcript.o llist.o code.o \
 
 KTCHECK_OBJ=    version.o ktcheck.o argcargv.o retr.o base64.o code.o \
                 cksum.o list.o llist.o connect.o applefile.o tls.o pathcmp.o \
-		progress.o mkdirs.o report.o rmdirs.o mkprefix.o
+		progress.o mkdirs.o report.o rmdirs.o mkprefix.o usageopt.o
 
 LAPPLY_OBJ=     version.o lapply.o argcargv.o code.o base64.o retr.o \
                 radstat.o update.o cksum.o connect.o pathcmp.o progress.o \
-                applefile.o report.o tls.o mkprefix.o
+                applefile.o report.o tls.o mkprefix.o usageopt.o
 
 LCREATE_OBJ=    version.o lcreate.o argcargv.o code.o connect.o progress.o \
                 stor.o applefile.o base64.o cksum.o radstat.o tls.o	\
@@ -79,14 +79,15 @@ LCKSUM_OBJ=     version.o lcksum.o argcargv.o cksum.o base64.o code.o	\
 		usageopt.o
 
 LMERGE_OBJ=     version.o lmerge.o argcargv.o code.o pathcmp.o mkdirs.o \
-		root.o
+		root.o usageopt.o
 
 LFDIFF_OBJ=     version.o lfdiff.o argcargv.o connect.o retr.o cksum.o \
                 progress.o base64.o applefile.o code.o tls.o pathcmp.o \
 		transcript.o list.o radstat.o hardlink.o mkprefix.o \
 		wildcard.o usageopt.o
 
-REPO_OBJ=	version.o repo.o report.o argcargv.o connect.o code.o tls.o
+REPO_OBJ=	version.o repo.o report.o argcargv.o connect.o code.o	\
+		tls.o usageopt.o
 
 T2PKG_OBJ=	version.o t2pkg.o argcargv.o transcript.o connect.o code.o \
 		hardlink.o cksum.o base64.o pathcmp.o radstat.o applefile.o \
@@ -96,7 +97,7 @@ TWHICH_OBJ=     version.o twhich.o argcargv.o transcript.o llist.o code.o \
                 hardlink.o cksum.o base64.o pathcmp.o radstat.o applefile.o \
 		list.o wildcard.o usageopt.o
 
-LSORT_OBJ=     version.o lsort.o pathcmp.o code.o argcargv.o
+LSORT_OBJ=     version.o lsort.o pathcmp.o code.o argcargv.o usageopt.o
 
 all : ${TARGETS}
 
@@ -157,6 +158,8 @@ lapply.o : lapply.c
 	${CC} ${CFLAGS} \
 		-D_RADMIND_HOST=\"${RADMIND_HOST}\" \
 		-D_RADMIND_AUTHLEVEL=${RADMIND_AUTHLEVEL} \
+		-D_RADMIND_PATH=\"${RADMINDDIR}\" \
+		-D_RADMIND_COMMANDFILE=\"${COMMANDFILE}\" \
 		-c ${srcdir}/lapply.c
 
 lcreate.o : lcreate.c
